added OneNodeRequestingCastList process for clusters and associated Test37a