@@ -1,6 +1,14 @@
+buildscript {
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+}
+
 plugins {
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.0.7'
+  id "com.jfrog.bintray" version "1.8.4"
 }
 
 group 'groovyParallelPatterns'
@@ -17,17 +25,40 @@ version '1.0.6'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
+apply plugin: 'maven'
 
-repositories {
-  mavenCentral()
-  jcenter()
-  maven {
-    url "https://dl.bintray.com/jonkerridge/jcsp"
-  }
-  // following required for groovy-all:3.0.0
-  maven {
-    url "https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all"
-  }
+Properties properties = new Properties()
+try {
+  properties.load(project.rootProject.file('local.properties').newDataInputStream())
+} catch (Exception e) {
+  logger.warn("Missing local.properties - won't be able to upload to Bintray.  \nPlease add local.properties with properties bintray.user and bintray.apikey.")
+}
+
+allprojects {
+  repositories {
+    jcenter()
+    mavenCentral()
+    // following required for groovy-all:3.0.0
+    maven {
+      url "https://dl.bintray.com/jonkerridge/jcsp"
+    }
+    maven {
+      url "https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all"
+    }  }
+  apply plugin: 'maven'
+  apply plugin: 'maven-publish'
+  apply plugin: 'java'
+  apply plugin: 'groovy'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
 }
 
 javafx {
@@ -36,17 +67,55 @@ javafx {
 
 mainClassName = "gppVis/Viualiser/org.openjfx.MainApp"
 
-//test {
-//  jvmArgs '--illegal-access=debug'
-//}
+artifacts {
+  archives sourcesJar, javadocJar
+}
+
+publishing {
+  publications {
+    MyPublication(MavenPublication) {
+      from components.java
+      groupId group
+      artifactId rootProject.name
+      version version
+
+      artifact sourcesJar {
+        classifier "sources"
+      }
+      artifact javadocJar {
+        classifier "javadoc"
+      }
+    }
+  }
+}
+
+bintray {
+  user = properties.containsKey('bintray.user') ? properties.getProperty('bintray.user') : System.getenv('BINTRAY_USER')
+  key = properties.containsKey('bintray.apikey') ? properties.getProperty('bintray.apikey') : System.getenv('BINTRAY_API_KEY')
+//  println " write keys = $user, $key"
+  publications = ['MyPublication']
+  pkg {
+    repo = 'gpp'
+    name = rootProject.name
+    userOrg = user
+    licenses = ['Apache-2.0', 'LGPL-2.1']
+    vcsUrl = 'https://github.com/JonKerridge/GPP_Library'
+    labels = ['csp', 'concurrency', 'parallelism', 'distributed systems', 'jcsp', 'parallel patterns and skeletons']
+    publicDownloadNumbers = true
+    version {
+      name = project.property('version')
+      desc = 'groovyParallelPatterns compiled using groovy-all-3.0.4 and Java 11'
+    }
+  }
+}
 
 dependencies {
-  compile 'org.codehaus.groovy:groovy-all:3.0.2'
+  compile 'org.codehaus.groovy:groovy-all:3.0.4'
   compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
   compile 'cspforjava:jcsp:1.1.0'
   compile 'groovyJCSP:groovyJCSP:1.1.5'
   compile group: 'junit', name: 'junit', version: '4.12'
-  testCompile 'org.codehaus.groovy:groovy-all:3.0.2'
+  testCompile 'org.codehaus.groovy:groovy-all:3.0.4'
   testCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
   testCompile 'cspforjava:jcsp:1.1.0'
   testCompile 'groovyJCSP:groovyJCSP:1.1.5'
